# CV_tailorer

./: .env  .gitignore  .pre-commit-config.yaml  CV_data.yaml  MakeFile  README.md  TODO.md  config.yaml  file_handler.py  main.py  pdf_generator.py  pyproject.toml  updated_cv_data.json
FP/: job_experience_text.txt
input_files copy/: CV_data.yaml  accenture.txt  accenture_nordics.txt  hoxhunt.txt  iceeye.txt  job_application_text.txt  kapacity.txt  mirantis.txt  oneio.txt  quadcode.txt  wartsila_job_appl.txt  wolt.txt  zoner_application.txt
output_file/: job_experience_text.txt  skills_text.txt  suggested_skills_text.txt
output_file/2025-12-090002/: job_experience_text.txt
output_file/Integrity360/: job_experience_text.txt  skills_text.txt  suggested_skills_text.txt
output_file/Wärtsilä/: job_experience_text.txt  skills_text.txt  suggested_skills_text.txt
output_files copy/EnergyHub/: cv_job_experience.txt  professional_summary.txt  suggested_skills.txt
output_files copy/FP/: skills_text.txt
output_files copy/Hoxhunt/: cv_job_experience.txt  job_application_business_name.txt  professional_summary.txt  suggested_skills.txt
output_files copy/Integrity360/: Integrity360skills_text.txt  job_experience_text.txt
output_files copy/Mirantis/: cv_job_experience.txt  job_application_business_name.txt  professional_summary.txt  suggested_skills.txt
output_files copy/ONEiO/: cv_job_experience.txt  job_application_business_name.txt  key_achievements.txt  professional_summary.txt  skills.txt  suggested_skills.txt
scripts/: file_cleanup.py
(+11 files in other folders)
